Simplify post controller method name
